// Use the protocol buffer compiler to generate client and server code.
// $ protoc --go_out=plugins=grpc:. mongo.proto

syntax = "proto3";

package protobuf;

service Geo {
  rpc echo(content) returns (content) {}
  rpc GetMaxmindCity(IP) returns (MaxmindCityInfo) {}
  rpc GetIpipCity(IP) returns (IpipCityInfo) {}
}

message content {
  bytes body = 1;
  map<string, string> headers = 2;
}

message IP {
  string IP = 1;
  string Lang = 2;
}

message MaxmindCityInfo {
  string Message=1;
  string City=2;
  string Subdivision=3;
  string Country=4;
  string Zone =5;
  double Latitude=6;
  double Longitude=7;
}

message IpipCityInfo {
  string Message=1;
  string Country=2;
  string Province=3;
  string City=4;
  string Org =5;
  string ISP=6;
  string Latitude=7;
  string Longitude =8;
  string TimeZone=9;
  string UTC=10;
  string ChinaCode=11;
  string PhoneCode=12;
  string ISO2=13;
  string Continent=14;
}
